feat(openapi): enum enhancement and vendor import by go.mod
