# __examples__/server/pkg/types/pull_policy.go
@@ -1,0 +1,9 @@
+package types
+
+type PullPolicy string
+
+const (
+	PullAlways       PullPolicy = "Always"
+	PullNever        PullPolicy = "Never"
+	PullIfNotPresent PullPolicy = "IfNotPresent"
+)
